WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
254720
Fix the iOS16 and macOS Ventura builds
https://bugs.webkit.org/show_bug.cgi?id=254720
Summary
Fix the iOS16 and macOS Ventura builds
Robert Jenner
Reported
2023-03-29 21:27:31 PDT
Submitting a build fix for the iOS 16.4 and macOS Ventura 13.3 build
Attachments
Add attachment
proposed patch, testcase, etc.
Robert Jenner
Comment 1
2023-03-29 21:28:31 PDT
<
rdar://problem/107145727
>
Robert Jenner
Comment 2
2023-03-29 22:52:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12160
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug