Fix the iOS16 and macOS Ventura builds https://bugs.webkit.org/show_bug.cgi?id=254720 rdar://107145727

Reviewed by NOBODY (OOPS!).

Changed needed to get iOS 16.4 and macOS Ventura 13.3 to build WebKit.

* Source/JavaScriptCore/API/ObjCCallbackFunction.mm:
(objCCallbackFunctionForInvocation):
* Source/ThirdParty/libwebrtc/Source/third_party/boringssl/src/crypto/x509/t_x509.c:
(X509_NAME_print):
* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp8/encoder/onyx_if.c:
(encode_frame_to_data_rate):
* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_encodeframe.c:
(compute_frame_aq_offset):
* Source/ThirdParty/libwebrtc/Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_ratectrl.c:
(vp9_encodedframe_overshoot):
* Source/WebCore/editing/cocoa/DataDetection.mm:
(WebCore::buildQuery):