Source/ThirdParty/libwebrtc/Source/third_party/boringssl/src/crypto/x509/t_x509.c
@@ -497,9 +497,8 @@ err:
 int X509_NAME_print(BIO *bp, const X509_NAME *name, int obase)
 {
     char *s, *c, *b;
-    int ret = 0, l, i;
+    int ret = 0, i;
 
-    l = 80 - 2 - obase;
 
     b = X509_NAME_oneline(name, NULL, 0);
     if (!b)
@@ -526,12 +525,10 @@ int X509_NAME_print(BIO *bp, const X509_NAME *name, int obase)
                 if (BIO_write(bp, ", ", 2) != 2)
                     goto err;
             }
-            l--;
         }
         if (*s == '\0')
             break;
         s++;
-        l--;
     }
 
     ret = 1;
